--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,8 +11,12 @@
 </header>
 <main>
 <div class="row">
+  <h1>{{message}}</h1>
   <div class="jumbotron">
-    <h1>{{message}}</h1>
+    <a-component></a-component>
+  </div>
+  <div class="jumbotron">
+    <b-component></b-component>
   </div>
 </div>
 
